--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
   --link-button-active-color: #404bbf;
   --background-page-color: #ffffff;
   --logotype-web-color: #4d5ae5;
+  --logotype-studio-down-color: #f4f4fd;
 }
 
 .list {
@@ -65,7 +66,7 @@ body {
 }
 
 .logotype-studio-down {
-  color: #f4f4fd;
+  color: var(--logotype-studio-down-color);
 }
 
 /* HEADER */
@@ -85,7 +86,6 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--link-button-active-color);
-  text-decoration: underline;
 }
 
 .address {
@@ -93,11 +93,10 @@ body {
 }
 
 .address-link {
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #434455;
+  color: var(--secondary-text-color);
 }
 
 .address-link:hover,
@@ -115,7 +114,7 @@ body {
   line-height: 1.07;
   text-align: center;
   letter-spacing: 0.02em;
-  color: #ffffff;
+  color: var(--background-page-color);
 }
 .hero-button {
   font-family: "Roboto", sans-serif;
@@ -125,8 +124,8 @@ body {
   display: flex;
   align-items: center;
   letter-spacing: 0.04em;
-  color: #ffffff;
-  background: #4d5ae5;
+  color: var(--background-page-color);
+  background-color: var(--logotype-web-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   cursor: pointer;
@@ -140,14 +139,14 @@ body {
 /* OUR TEAM */
 
 .team {
-  background-color: #f4f4fd;
+  background-color: var(--logotype-studio-down-color);
 }
 .team-align {
   text-align: center;
 }
 
 .team-item {
-  background-color: #ffffff;
+  background-color: var(--background-page-color);
 }
 
 /* PORTFOLIO */
@@ -160,8 +159,8 @@ body {
   align-items: center;
   text-align: center;
   letter-spacing: 0.04em;
-  color: #4d5ae5;
-  background-color: #f4f4fd;
+  color: var(--logotype-web-color);
+  background-color: var(--logotype-studio-down-color);
   border: 1px solid #e7e9fc;
   border-radius: 4px;
   cursor: pointer;
@@ -169,7 +168,7 @@ body {
 
 .menu-button:hover,
 .menu-button:focus {
-  color: #ffffff;
+  color: var(--background-page-color);
   background-color: var(--link-button-active-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -189,5 +188,5 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #f4f4fd;
+  color: var(--logotype-studio-down-color);
 }
